[workspace]
members = ["crm", "user-stat"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# NOTICE: `prost-builder-trait` only tonic-build 0.11 not support 0.12 and over

[workspace.dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.12.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0" # NOTICE: `prost-builder-trait` only tonic-build 0.11 not support 0.12 and over
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
