[package]
name = "crm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
derive_builder = { workspace = true }
crm-send = { workspace = true }
crm-metadata = {workspace = true}
user-stat = { workspace = true }
uuid = { version = "1.10.0", features = ["v4"] }


[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = "0.6.1"
tonic-build = { workspace = true }
